[package]
name = "persistent-queue-experiments"
version = "0.1.0"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[dependencies]
bincode = "1.3.1"
chrono = { version = "0.4.15", features = ["serde"] }
queue-file = "1.1.0"
rustbreak = { version = "2.0.0", features = ["bin_enc", "yaml_enc"] }
serde = { version = "1.0.115", features = ["std", "derive"] }
serde_yaml = "0.8.13"
